--- a/MovieStreamer/Views/Account/Register.cshtml
+++ b/MovieStreamer/Views/Account/Register.cshtml
@@ -18,7 +18,7 @@
             }
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
+                <input asp-for="Email" class="form-control"/>
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -43,3 +43,6 @@
         </form>
     </div>
 </div>
+
+<script type="text/javascript">
+</script>
